Fix friends list right edge gap using negative margins

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -766,8 +766,9 @@ h1 {
 /* Wrapper for scroll fade effect */
 .friends-list-wrapper {
     position: relative;
-    width: 100vw;
-    margin-left: calc(-50vw + 50%);
+    width: calc(100% + 60px);
+    margin-left: -30px;
+    margin-right: -30px;
 }
 
 /* Fade gradient on right (leading edge) when scrollable - slightly favored */
@@ -1765,6 +1766,12 @@ h1 {
     .container {
         padding: 20px 20px 20px;
         max-width: 100%;
+    }
+    
+    .friends-list-wrapper {
+        width: calc(100% + 40px);
+        margin-left: -20px;
+        margin-right: -20px;
     }
     
     h1 {
